--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings 配置站点
-title: '廖柯宇的独立博客'
+title: 'zplustar博客'
 description: '昵称悟空，千禧一代，前端开发者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
-keyword: '廖柯宇, 廖柯宇的独立博客, 廖柯宇的博客, 前端, 前端开发, 前端博客, javascript, vuejs, nodejs, 设计'
-url: 'http://liaokeyu.com' # your host
+keyword: 'zhujiaxing, zplustar, zplustar博客, 前端, PHP, thinkPHP, laraval, javascript, vuejs, nodejs'
+url: 'http://zplustar.xyz' # your host
 
 # if you don't need baseurl, you should leave this value blank.
 baseurl: ''
@@ -13,8 +13,8 @@ nav:
   tags: '/tags.html'
 
 # Author 配置博主信息
-author: '廖柯宇'
-nickname: '悟空'
+author: '朱嘉星'
+nickname: 'zplustar'
 bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
 avatar: '/assets/img/profile.png'
 
@@ -26,7 +26,7 @@ nightMode: true
 
 # Comments
 disqus: false
-disqus_url: 'https://liaokeyu.disqus.com/embed.js'
+disqus_url: ''
 
 # Share
 social-share: true
@@ -40,10 +40,10 @@ postPatterns: 'circuitBoard'
 
 # SNS settings 配置社交网站url: weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
 sns:
-  weibo: '//weibo.com/lovecolcol'
-  juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
-  instagram: '//www.instagram.com/steveliaocn'
-  github: '//github.com/kaeyleo'
+  weibo: '//#'
+  juejin: '//#'
+  instagram: '//#'
+  github: '//#'
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
