--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ nav:
 # Author 配置博主信息
 author: '朱嘉星'
 nickname: 'zplustar'
-bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
+bio: 'PHP开发者，热爱技术，热爱开源'
 avatar: '/assets/img/profile.png'
 
 # Search
