--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings 配置站点
 title: 'zplustar博客'
-description: '昵称悟空，千禧一代，前端开发者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
+description: '很高兴能在这里与你分享我对技术和生活的思考。'
 keyword: 'zhujiaxing, zplustar, zplustar博客, 前端, PHP, thinkPHP, laraval, javascript, vuejs, nodejs'
 url: 'http://zplustar.xyz' # your host
 
