--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Site settings 配置站点
+﻿# Site settings 配置站点
 title: 'zplustar博客'
 description: '很高兴能在这里与你分享我对技术和生活的思考。'
 keyword: 'zhujiaxing, zplustar, zplustar博客, 前端, PHP, thinkPHP, laraval, javascript, vuejs, nodejs'
@@ -13,7 +13,7 @@ nav:
   tags: '/tags.html'
 
 # Author 配置博主信息
-author: '朱嘉星'
+author: 'zplustar'
 nickname: 'zplustar'
 bio: 'PHP开发者，热爱技术，热爱开源'
 avatar: '/assets/img/profile.png'
