--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ﻿# Site settings 配置站点
 title: 'zplustar博客'
-description: '很高兴能在这里与你分享我对技术和生活的思考。'
+description: '分享生活，分享技术，思考是进步的动力'
 keyword: 'zhujiaxing, zplustar, zplustar博客, 前端, PHP, thinkPHP, laraval, javascript, vuejs, nodejs'
 url: 'http://zplustar.xyz' # your host
 
@@ -15,7 +15,7 @@ nav:
 # Author 配置博主信息
 author: 'zplustar'
 nickname: 'zplustar'
-bio: 'PHP开发者，热爱技术，热爱开源'
+bio: 'web，php，爱技术，爱开源，简单创新'
 avatar: '/assets/img/profile.png'
 
 # Search
@@ -41,8 +41,8 @@ postPatterns: 'circuitBoard'
 # SNS settings 配置社交网站url: weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
 sns:
   weibo: '//#'
-  juejin: '//#'
-  instagram: '//#'
+  zhihu: '//#'
+  twitter: '//#'
   github: '//#'
 
 # Tags 设置标签
